Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/cast/7005095/T7005095neg.out
T7005095neg.java:13:25: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: T7005095pos.FooImpl, T7005095pos.Foo<T>)
1 error
